--- a/css/style.css
+++ b/css/style.css
@@ -176,16 +176,26 @@ body {
     max-width: 398px;
     margin: 0 auto;
 }
-.footer {
-    padding: 250px 0 40px;
-    background-color: #000;
-}
 .audio {
+    /* position: relative; */
+    background-image: url(../images/audio-full.jpg);
+    background-position: top center;
+    background-repeat: no-repeat;
+    background-size: cover;
+}
+/* .audio::before {
+    content: '';
     background-image: url(../images/tip.jpg);
     background-position: top center;
     background-repeat: no-repeat;
     background-size: cover;
-    position: relative;
+    position: absolute;
+    top: 0;
+    right: 0;
+    left: 0;
+    bottom: 0;
+    width: 100%;
+    height: 100%;
     z-index: -2;
 }
 .audio::after {
@@ -201,10 +211,9 @@ body {
     height: 150vh;
     background-repeat: no-repeat;
     z-index: -1;
-
-}
+} */
 .audio-inner {
-    min-height: 200vh;
+    min-height: 220vh;
     display: flex;
     justify-content: center;
     align-items: flex-end;
@@ -213,7 +222,7 @@ body {
     position: relative;
     color: white;
     text-align: center;
-    padding-bottom: 30vh;
+    padding-bottom: 55vh;
     z-index: 1;
 }
 .audio-text {
@@ -230,4 +239,21 @@ body {
     font-weight: 700;
     margin-top: 25px;
     cursor: pointer;
+}
+.footer {
+    padding: 50px 0 40px;
+    background-color: #000;
+    color: white;
+    text-align: center;
+    font-weight: 700;
+}
+.footer-text {
+    padding: 20px 0;
+}
+.footer-list {
+    padding-top: 80px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    gap: 0 20px;
 }
